--- a/wp-content/themes/onetone/admin/css/optionsframework.css
+++ b/wp-content/themes/onetone/admin/css/optionsframework.css
@@ -240,9 +240,11 @@
 #section-home_animated{
 	display: none!important;
 }
+/*
 #section-youtube_video_titled{
 	display: none!important;
 }
+*/
 #section-section_order_titled{
 	display: none!important;
 }
@@ -483,9 +485,11 @@
 #section-section_content_model_8{
 	display: none!important;
 }
+/*
 #section-sections_titled_9{
 	display: none!important;
 }
+*/
 #section-sections_titled_10{
 	display: none!important;
 }
